--- a/Countries/Presentation/SearchCountry/Views/CountryTableViewCell.xib
+++ b/Countries/Presentation/SearchCountry/Views/CountryTableViewCell.xib
@@ -12,33 +12,33 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CountryTableViewCell" rowHeight="52" id="KGk-i7-Jjw" customClass="CountryTableViewCell" customModule="Countries" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="52"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CountryTableViewCell" rowHeight="63" id="KGk-i7-Jjw" customClass="CountryTableViewCell" customModule="Countries" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="63"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="51.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="62.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R89-ap-Ex9">
-                        <rect key="frame" x="69" y="14" width="243" height="23.5"/>
+                        <rect key="frame" x="104" y="20.5" width="208" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uZU-m8-HM2">
-                        <rect key="frame" x="16" y="11" width="45" height="30"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uZU-m8-HM2">
+                        <rect key="frame" x="16" y="11" width="80" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="Oz9-KA-Fae"/>
-                            <constraint firstAttribute="width" constant="45" id="jdQ-xD-a12"/>
+                            <constraint firstAttribute="width" secondItem="uZU-m8-HM2" secondAttribute="height" multiplier="2:1" id="6P6-kR-fcq"/>
+                            <constraint firstAttribute="height" constant="40" id="Oz9-KA-Fae"/>
                         </constraints>
                     </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="R89-ap-Ex9" secondAttribute="bottom" constant="14" id="6Rw-8P-jE0"/>
                     <constraint firstItem="R89-ap-Ex9" firstAttribute="leading" secondItem="uZU-m8-HM2" secondAttribute="trailing" constant="8" id="D8a-JJ-e9N"/>
-                    <constraint firstItem="R89-ap-Ex9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="DAc-vp-z4r"/>
                     <constraint firstItem="uZU-m8-HM2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="UOv-Fs-tfG"/>
+                    <constraint firstItem="R89-ap-Ex9" firstAttribute="centerY" secondItem="uZU-m8-HM2" secondAttribute="centerY" id="Xlr-kq-f8T"/>
                     <constraint firstAttribute="trailing" secondItem="R89-ap-Ex9" secondAttribute="trailing" constant="8" id="lfZ-1q-QQK"/>
+                    <constraint firstAttribute="bottom" secondItem="R89-ap-Ex9" secondAttribute="bottom" constant="21" id="rFG-a5-NGv"/>
                     <constraint firstItem="uZU-m8-HM2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="vQl-9Y-Q6y"/>
                 </constraints>
             </tableViewCellContentView>
@@ -47,7 +47,7 @@
                 <outlet property="countryName" destination="R89-ap-Ex9" id="vaR-Zg-scf"/>
                 <outlet property="flagImage" destination="uZU-m8-HM2" id="bpv-de-Oz9"/>
             </connections>
-            <point key="canvasLocation" x="120" y="77.361319340329842"/>
+            <point key="canvasLocation" x="120" y="82.3088455772114"/>
         </tableViewCell>
     </objects>
 </document>
